Change database properties

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.console.Target=System.out
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=${format}
-log4j.appender.FILE.File=FinalSalary.log
+log4j.appender.FILE.File=logs/FinalSalary.log
 log4j.appender.FILE.MaxFileSize=20MB
 log4j.appender.FILE.Threshold=ALL
 
