--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <name>FinalSalary</name>
 
     <properties>
+        <junit.jupiter.version>5.5.1</junit.jupiter.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>ph.petrologisticscorp.finalsalary.Main</mainClass>
     </properties>
@@ -19,6 +20,13 @@
         <!-- Used as the 'Vendor' for JNLP generation -->
         <name>Your Organisation</name>
     </organization>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -88,14 +96,14 @@
             <artifactId>wordnet-random-name</artifactId>
             <version>1.3</version>
         </dependency>
-    </dependencies>
 
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
