Change report query and implement salary service

--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,10 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <compilerArguments>
+                        <bootclasspath>${sun.boot.class.path}${path.separator}${java.home}/lib/ext/jfxrt.jar
+                        </bootclasspath>
+                    </compilerArguments>
                 </configuration>
             </plugin>
             <plugin>
