--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=${format}
 log4j.appender.FILE.File=logs/FinalSalary.log
 log4j.appender.FILE.MaxFileSize=5MB
-log4j.appender.FILE.Threshold=WARNING
+log4j.appender.FILE.Threshold=ERROR
 
 
 log4j.logger.org.hibernate=ERROR, hb
